--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,31 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'GangwonState';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  /* 배경 이미지 URL 설정 */
+  background-image: url('../public/bgg.png');
+
+  /* 이미지가 화면 크기에 맞게 조정됨 */
+  background-size: cover;
+
+  /* 이미지가 반복되지 않게 설정 */
+  background-repeat: no-repeat;
+
+  /* 배경 이미지가 항상 중앙에 위치하도록 설정 */
+  background-position: center center;
+
+  /* 웹 페이지의 전체 높이를 차지하도록 설정 */
+  min-height: 100vh;
+
+  /* 기타 필요한 스타일 */
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+}
