--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,16 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'SUIT-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   /* 배경 이미지 URL 설정 */
-  background-image: url('../public/bgg.png');
+  /* background-image: url('../public/bgg.png'); */
 
   /* 이미지가 화면 크기에 맞게 조정됨 */
   background-size: cover;
